fix: remove gap in scoreboard bg

--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,10 @@
 
   /* Scoreboard Styling Colours */
   --scoreboard-border-colour: var(--pink-200);
+  --scoreboard-bg-colour: var(--pink-200);
   --score-section-colour: var(--pink-200);
   --score-section-bg-colour: var(--white);
   --best-score-section-colour: var(--white);
-  --best-score-section-bg-colour: var(--pink-200);
 
   /* Villager Card Styling Colours */
   --villager-card-bg-colour: var(--white);
