--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -1,24 +1,15 @@
 :root {
-    --scoreboard-border-rounding: 8px;
-    --scoreboard-padding: 4px;
+    --scoreboard-border-rounding: 10px;
+    --scoreboard-padding: 8px;
 }
 
 .scoreboard {
     width: 100px;
-}
 
-/* Create border wrapping both sections together */
-.score-section, 
-.best-score-section {
-    border: 2px solid var(--scoreboard-border-colour);
-}
-.score-section {
-    border-bottom: none;
-    border-radius: var(--scoreboard-border-rounding) var(--scoreboard-border-rounding) 0 0;
-}
-.best-score-section {
-    border-top: none;
-    border-radius: 0 0 var(--scoreboard-border-rounding) var(--scoreboard-border-rounding);
+    overflow: hidden;
+    background-color: var(--scoreboard-bg-colour);
+    border: 3px solid var(--scoreboard-border-colour);
+    border-radius: var(--scoreboard-border-rounding);
 }
 
 .score-section {
@@ -53,7 +44,6 @@
     padding: var(--scoreboard-padding);
 
     color: var(--best-score-section-colour);
-    background-color: var(--best-score-section-bg-colour);
 }
 
 /* Desktop Styling */
